partially update notebooks for mimo sps changes

--- a/search/notebooks/search_benchmarking.ipynb
+++ b/search/notebooks/search_benchmarking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "4e9807d3",
    "metadata": {},
    "outputs": [
@@ -61,15 +61,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "98179a54",
+   "execution_count": 2,
+   "id": "5c77ab10",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def get_construct_ss_from_params_method(n_states: int, n_inputs: int, n_outputs: int, C: np.array):\n",
+    "    \"\"\"\n",
+    "    Returns the function to construct state space matrices from parameters.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def _construct_ss_from_params(params: np.array):\n",
+    "        \"\"\"\n",
+    "        Returns state space matrices A_obs,B_obs,C_obs,D_obs and the A,B polynomials\n",
+    "        \"\"\"\n",
+    "        # A: n_state x n_state matrix\n",
+    "        A =  params[:n_states]\n",
+    "        A_obs = np.hstack([np.vstack([np.zeros(n_states-1), np.eye(n_states-1)]), -np.flipud(A.reshape(A.size,-1))])\n",
+    "        # B: n_state x n_input matrix\n",
+    "        B = params[n_states:n_states+n_states*n_inputs].reshape(n_inputs,n_states)\n",
+    "        B_obs = np.flipud(B.T)\n",
+    "        # C: n_output x n_state matrix\n",
+    "        C_obs = C\n",
+    "        # D: n_output x n_input matrix: zero matrix for now\n",
+    "        D_obs = np.zeros((n_outputs,n_inputs))\n",
+    "\n",
+    "        A = np.hstack([1, A])\n",
+    "        B = np.hstack([np.zeros((n_inputs,1)), B])\n",
+    "\n",
+    "        return A_obs, B_obs, C_obs, D_obs, A, B\n",
+    "    return _construct_ss_from_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98179a54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.69371611 0.39658888]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from search.test_systems import OpenLoop1, OpenLoop2, ClosedLoop1, ClosedLoop2, a1_true, a2_true, b1_true, b2_true\n",
     "from search.search import SPSSearch\n",
     "from indirect_identification.sps_indirect import SPS_indirect_model\n",
+    "from indirect_identification.tf_methods.fast_tfs_methods_fast_math import _is_stable\n",
+    "from indirect_identification.d_tfs import d_tfs, apply_tf_matrix\n",
+    "from dB.sim_db import SPSType\n",
+    "from scipy import optimize\n",
+    "\n",
+    "# from indirect_identification.sps_utils import get_construct_ss_from_params_method\n",
     "n_samples = 1000\n",
     "\n",
     "IS_VERBOSE = False\n",
@@ -77,15 +125,56 @@
     "# Initialise SPS\n",
     "m = 100\n",
     "q = 5\n",
-    "model = SPS_indirect_model(m, q, N=100)\n",
+    "n = 100\n",
     "\n",
     "armax_model = OpenLoop1\n",
     "n_a = len(armax_model.A) - 1\n",
     "n_b = len(armax_model.B)\n",
     "\n",
+    "\n",
     "# Initialise the system\n",
     "R = signal.square(np.linspace(0, 10*np.pi, n_samples))\n",
     "Y, U, N, R = armax_model.simulate(n_samples, R, noise_std=0.2)\n",
+    "\n",
+    "epsilon = 1e-10\n",
+    "\n",
+    "\n",
+    "n_outputs = 1\n",
+    "n_inputs = 1\n",
+    "n_noise = 1\n",
+    "n_states=max(n_a, n_b)\n",
+    "\n",
+    "C_obs = np.array([1])\n",
+    "\n",
+    "\n",
+    "model = SPS_indirect_model(m, q, N=n,\n",
+    "                           n_states=n_states, n_inputs=n_inputs, n_outputs=n_outputs,\n",
+    "                           n_noise=n_noise)\n",
+    "\n",
+    "_construct_ss_from_params = get_construct_ss_from_params_method(n_states=n_states, n_inputs=n_inputs, n_outputs=n_outputs, C=C_obs)\n",
+    "\n",
+    "def get_error_norm(coord, Y, U):\n",
+    "    A_obs, B_obs, C_obs, D_obs, A,B = _construct_ss_from_params(coord)\n",
+    "    G = d_tfs.ss_to_tf(A_obs, B_obs, C_obs, D_obs, check_assumption=False, epsilon=epsilon)\n",
+    "    if not _is_stable(A, epsilon=epsilon):\n",
+    "        return 1e10\n",
+    "    C = np.empty((n_outputs, 1))\n",
+    "    Hinv=d_tfs((A,np.array([1.0])))\n",
+    "\n",
+    "    YGU = Y - G*U\n",
+    "    N = Hinv * YGU\n",
+    "\n",
+    "    error_norm = np.linalg.norm(N@N.T)\n",
+    "    return error_norm\n",
+    "\n",
+    "def get_lse(Y,U):\n",
+    "    x0 = np.zeros(2)\n",
+    "    res = optimize.least_squares(get_error_norm, x0, args=(Y,U))\n",
+    "    params_ls = res.x\n",
+    "    return params_ls\n",
+    "\n",
+    "lse = get_lse(Y, U)\n",
+    "print(lse)\n",
     "\n",
     "\n",
     "def sps_test_function(params, F, L, U, Y, n_a, n_b):\n",
@@ -115,6 +204,7 @@
     "    G_0, H_0 = G, H\n",
     "    try:\n",
     "        if F != [0] and F != 0:\n",
+    "\n",
     "            G_0, H_0 = model.transform_to_open_loop(G, H, F, L, supress_stability=False)\n",
     "\n",
     "        in_sps, S1 = model.open_loop_sps(G_0=G_0, H_0=H_0, Y_t=Y, U_t=U, n_a=n_a, n_b=n_b)\n",
@@ -123,6 +213,32 @@
     "\n",
     "    # Check the condition and store the result if true\n",
     "    return in_sps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "091b15f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-1.]]),\n",
+       " array([[2]]),\n",
+       " array([1]),\n",
+       " array([[0.]]),\n",
+       " array([1, 1]),\n",
+       " array([[0., 2.]]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_construct_ss_from_params(np.array([1,2]))\n"
    ]
   },
   {
@@ -135,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d327ed80",
    "metadata": {},
    "outputs": [
@@ -146,8 +262,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m b_vals:\n\u001b[1;32m     21\u001b[0m     point \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([a, b])\n\u001b[0;32m---> 22\u001b[0m     in_sps \u001b[38;5;241m=\u001b[39m \u001b[43msps_test_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mF\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mL\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mU\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m in_sps:\n\u001b[1;32m     24\u001b[0m         baseline_in\u001b[38;5;241m.\u001b[39mappend([a, b])\n",
-      "Cell \u001b[0;32mIn[4], line 51\u001b[0m, in \u001b[0;36msps_test_function\u001b[0;34m(params, F, L, U, Y, n_a, n_b)\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m F \u001b[38;5;241m!=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m F \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     49\u001b[0m         G_0, H_0 \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mtransform_to_open_loop(G, H, F, L, supress_stability\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m---> 51\u001b[0m     in_sps, S1 \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen_loop_sps\u001b[49m(G_0\u001b[38;5;241m=\u001b[39mG_0, H_0\u001b[38;5;241m=\u001b[39mH_0, Y_t\u001b[38;5;241m=\u001b[39mY, U_t\u001b[38;5;241m=\u001b[39mU, n_a\u001b[38;5;241m=\u001b[39mn_a, n_b\u001b[38;5;241m=\u001b[39mn_b)\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     53\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[14], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m b_vals:\n\u001b[1;32m     21\u001b[0m     point \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([a, b])\n\u001b[0;32m---> 22\u001b[0m     in_sps \u001b[38;5;241m=\u001b[39m \u001b[43msps_test_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mF\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mL\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mU\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m in_sps:\n\u001b[1;32m     24\u001b[0m         baseline_in\u001b[38;5;241m.\u001b[39mappend([a, b])\n",
+      "Cell \u001b[0;32mIn[13], line 90\u001b[0m, in \u001b[0;36msps_test_function\u001b[0;34m(params, F, L, U, Y, n_a, n_b)\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m F \u001b[38;5;241m!=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m F \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     88\u001b[0m         G_0, H_0 \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mtransform_to_open_loop(G, H, F, L, supress_stability\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m---> 90\u001b[0m     in_sps, S1 \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen_loop_sps\u001b[49m(G_0\u001b[38;5;241m=\u001b[39mG_0, H_0\u001b[38;5;241m=\u001b[39mH_0, Y_t\u001b[38;5;241m=\u001b[39mY, U_t\u001b[38;5;241m=\u001b[39mU, n_a\u001b[38;5;241m=\u001b[39mn_a, n_b\u001b[38;5;241m=\u001b[39mn_b)\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     92\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'SPS_indirect_model' object has no attribute 'open_loop_sps'"
      ]
     }
