--- a/search/notebooks/smart_search_2d.ipynb
+++ b/search/notebooks/smart_search_2d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "id": "e32b69f0",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Directory: C:\\Users\\Jake\\Learning-Dynamic-Systems\\search\\notebooks\n",
-      "Parent Directory: C:\\Users\\Jake\\Learning-Dynamic-Systems\n"
+      "Current Directory: /Users/jakepiddington/Learning-Dynamic-Systems/search/notebooks\n",
+      "Parent Directory: /Users/jakepiddington/Learning-Dynamic-Systems\n"
      ]
     }
    ],
@@ -29,13 +29,13 @@
     "# Optionally append to sys.path\n",
     "sys.path.append(str(root))\n",
     "\n",
-    "# Initialise SPS \n",
+    "# Initialise SPS\n",
     "from indirect_identification.sps_indirect import SPS_indirect_model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "eee399c9",
    "metadata": {
     "vscode": {
@@ -47,18 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: redis[hiredis] in c:\\users\\jake\\learning-dynamic-systems\\.venv\\lib\\site-packages (5.2.1)\n",
-      "Requirement already satisfied: hiredis>=3.0.0 in c:\\users\\jake\\learning-dynamic-systems\\.venv\\lib\\site-packages (from redis[hiredis]) (3.1.0)\n",
+      "zsh:1: no matches found: redis[hiredis]\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 25.0.1 -> 25.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -76,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "b236dd68",
    "metadata": {},
    "outputs": [],
@@ -110,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "514a4c42",
    "metadata": {},
    "outputs": [],
@@ -178,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "63637e04",
    "metadata": {},
    "outputs": [],
@@ -201,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "ef0b837f",
    "metadata": {},
    "outputs": [],
@@ -224,7 +214,7 @@
     "\n",
     "    for _ in range(n_b):\n",
     "        b.append(params.pop(0))\n",
-    "        \n",
+    "\n",
     "    A = [1, *a]\n",
     "    B = [0, *b]\n",
     "    C = [1]\n",
@@ -239,25 +229,13 @@
     "    try:\n",
     "        if F != [0] and F != 0:\n",
     "            G_0, H_0 = model.transform_to_open_loop(G, H, F, L, supress_stability=False)\n",
-    "    \n",
+    "\n",
     "        in_sps, S1 = model.open_loop_sps(G_0=G_0, H_0=H_0, Y_t=Y, U_t=U, n_a=n_a, n_b=n_b)\n",
     "    except ValueError as e:\n",
     "        return False\n",
     "\n",
     "    # Check the condition and store the result if true\n",
     "    return in_sps\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e161555b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -297,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "e95428c4",
    "metadata": {},
    "outputs": [
@@ -322,12 +300,11 @@
    ],
    "source": [
     "# Test one model\n",
-    "\n",
     "def test_model(armax_model: ARMAX, n_vectors):\n",
     "    n_a = len(armax_model.A) - 1\n",
     "    n_b = len(armax_model.B)\n",
     "    n_dim = n_a + n_b\n",
-    "    \n",
+    "\n",
     "    # Initialise the system\n",
     "    R = signal.square(np.linspace(0, 10*np.pi, n_samples))\n",
     "    Y, U, N, R = armax_model.simulate(n_samples, R, noise_std=0.1)\n",
@@ -338,17 +315,15 @@
     "        n_sps_calls += 1    # Increment the call count\n",
     "\n",
     "        return sps_test_function( tuple(coords), armax_model.F, armax_model.L, U, Y, n_a, n_b)\n",
-    "    \n",
+    "\n",
     "    # Calculate the LSE\n",
     "    lse = get_lse(U, Y, armax_model, n_a, n_b )\n",
-    "\n",
-    "    \n",
     "\n",
     "    search = RadialSearch(n_dim=n_dim,\n",
     "                            n_vectors=n_vectors,\n",
     "                            center=lse,\n",
     "                            sps_test_function=test_wrapper)\n",
-    "    \n",
+    "\n",
     "\n",
     "    return lse, *search.search()\n",
     "\n",
@@ -362,23 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "b319f9aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "# knn_intersection = compare_hulls(baseline_expanded[::-1], knn_expanded[::-1])\n",
-    "\n",
-    "# union_list = np.concatenate([baseline_in, knn_in])\n",
-    "# knn_union = ConvexHull(union_list)\n",
-    "# union_points = union_list[knn_union.vertices]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "e45b3f33",
    "metadata": {},
    "outputs": [
@@ -541,7 +500,7 @@
     "    n_a = len(model_under_test.A) - 1\n",
     "    n_b = len(model_under_test.B)\n",
     "    n_dim = n_a + n_b\n",
-    "    \n",
+    "\n",
     "    # Initialise the system\n",
     "    R = signal.square(np.linspace(0, 10*np.pi, n_samples))\n",
     "    Y, U, N, R = model_under_test.simulate(n_samples, R, noise_std=0.1)\n",
@@ -553,7 +512,7 @@
     "        n_sps_calls += 1    # Increment the call count\n",
     "\n",
     "        return sps_test_function( tuple(coords), model_under_test.F, model_under_test.L, U, Y, n_a, n_b)\n",
-    "    \n",
+    "\n",
     "    results_dict = {}\n",
     "\n",
     "    for n_vectors in test_n_vectors:\n",
@@ -570,12 +529,12 @@
     "            ins, outs, boundaries, hull, expanded_hull = search.search()\n",
     "            end_time = time.time()\n",
     "            print(\"N SPS: \", n_sps_calls)\n",
-    "            \n",
+    "\n",
     "            curr_results.append(end_time - start_time)\n",
     "\n",
     "        results_dict[n_vectors] = np.array(curr_results)\n",
     "    models_dict[model_under_test] = results_dict\n",
-    "    \n",
+    "\n",
     "\n"
    ]
   },
@@ -882,7 +841,7 @@
    "source": [
     "print(results_dict)\n",
     "\n",
-    " \n",
+    "\n",
     "for model_under_test in test_models:\n",
     "    for x in test_n_vectors:\n",
     "        mean = np.mean(models_dict[model_under_test][x])\n",
@@ -971,7 +930,7 @@
     "        profiler.disable()\n",
     "        stats = pstats.Stats(profiler).sort_stats('cumtime')\n",
     "        stats.print_stats()\n",
-    "except Exception as e: \n",
+    "except Exception as e:\n",
     "    print(e)\n",
     "    profiler.disable()\n"
    ]
@@ -979,7 +938,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "3.11.8",
    "language": "python",
    "name": "python3"
   },
@@ -993,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
