--- a/search/notebooks/search_benchmarking.ipynb
+++ b/search/notebooks/search_benchmarking.ipynb
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Directory: /Users/jakepiddington/Learning-Dynamic-Systems/search/notebooks\n",
-      "Parent Directory: /Users/jakepiddington/Learning-Dynamic-Systems\n",
-      "Current Directory: /Users/jakepiddington/Learning-Dynamic-Systems/search/notebooks\n",
-      "Parent Directory: /Users/jakepiddington/Learning-Dynamic-Systems\n"
+      "Current Directory: C:\\Users\\Jake\\Learning-Dynamic-Systems\\search\\notebooks\n",
+      "Parent Directory: C:\\Users\\Jake\\Learning-Dynamic-Systems\n",
+      "Current Directory: C:\\Users\\Jake\\Learning-Dynamic-Systems\\search\\notebooks\n",
+      "Parent Directory: C:\\Users\\Jake\\Learning-Dynamic-Systems\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.69371611 0.39658888]\n"
+      "[0.67904477 0.39659823]\n"
      ]
     }
    ],
@@ -176,6 +176,23 @@
     "lse = get_lse(Y, U)\n",
     "print(lse)\n",
     "\n",
+    "def is_inside_region(point):\n",
+    "    try :\n",
+    "        A_obs, B_obs, C_obs, D_obs, A,B = _construct_ss_from_params(point)\n",
+    "        G = d_tfs.ss_to_tf(A_obs, B_obs, C_obs, D_obs, check_assumption=False, epsilon=epsilon)\n",
+    "        if not _is_stable(A, epsilon=epsilon):\n",
+    "            return False\n",
+    "        C = np.array([1])\n",
+    "\n",
+    "        H = d_tfs((C,A))\n",
+    "        Lambda = np.array([[1.0, 0],[0, 1.0]]) # shape n_output x n_output\n",
+    "        in_sps = model.sps_indicator(G=G, H=H, A=A, B=B, C=C,\n",
+    "                            Y_t = np.array([Y]), U_t=np.array([U]), sps_type=SPSType.OPEN_LOOP, Lambda=None)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in SPS check: {e}\")\n",
+    "        in_sps = False\n",
+    "    return in_sps\n",
+    "\n",
     "\n",
     "def sps_test_function(params, F, L, U, Y, n_a, n_b):\n",
     "    if IS_VERBOSE:\n",
@@ -217,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "091b15f3",
    "metadata": {},
    "outputs": [
@@ -232,7 +249,7 @@
        " array([[0., 2.]]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,20 +271,7 @@
    "execution_count": null,
    "id": "d327ed80",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'SPS_indirect_model' object has no attribute 'open_loop_sps'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m b_vals:\n\u001b[1;32m     21\u001b[0m     point \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([a, b])\n\u001b[0;32m---> 22\u001b[0m     in_sps \u001b[38;5;241m=\u001b[39m \u001b[43msps_test_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mF\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mL\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mU\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m in_sps:\n\u001b[1;32m     24\u001b[0m         baseline_in\u001b[38;5;241m.\u001b[39mappend([a, b])\n",
-      "Cell \u001b[0;32mIn[13], line 90\u001b[0m, in \u001b[0;36msps_test_function\u001b[0;34m(params, F, L, U, Y, n_a, n_b)\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m F \u001b[38;5;241m!=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m F \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     88\u001b[0m         G_0, H_0 \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mtransform_to_open_loop(G, H, F, L, supress_stability\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m---> 90\u001b[0m     in_sps, S1 \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen_loop_sps\u001b[49m(G_0\u001b[38;5;241m=\u001b[39mG_0, H_0\u001b[38;5;241m=\u001b[39mH_0, Y_t\u001b[38;5;241m=\u001b[39mY, U_t\u001b[38;5;241m=\u001b[39mU, n_a\u001b[38;5;241m=\u001b[39mn_a, n_b\u001b[38;5;241m=\u001b[39mn_b)\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     92\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SPS_indirect_model' object has no attribute 'open_loop_sps'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Grid search\n",
     "\n",
@@ -290,7 +294,7 @@
     "    for b in b_vals:\n",
     "\n",
     "        point = np.array([a, b])\n",
-    "        in_sps = sps_test_function( tuple(point), F, L, U, Y, 1, 1)\n",
+    "        in_sps = is_inside_region(point)\n",
     "        if in_sps:\n",
     "            baseline_in.append([a, b])\n",
     "        else:\n",
@@ -754,7 +758,7 @@
        "<matplotlib.legend.Legend at 0x1c3a5d7ae70>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -816,7 +820,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.11.8",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -830,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
