closed-loop online sim armax

--- a/indirect_identification/notebooks/sps_mimo.ipynb
+++ b/indirect_identification/notebooks/sps_mimo.ipynb
@@ -39,6 +39,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6efff173",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from indirect_identification.sps_utils import get_construct_ss_from_params_method, get_max_radius, get_construct_ss_from_params_method_siso\n",
+    "\n",
+    "construct_ss_from_params = get_construct_ss_from_params_method_siso(n_A=nA,n_B=nB)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9d5aafdb",
    "metadata": {},
