--- a/optimal_controller/optimal_controls.ipynb
+++ b/optimal_controller/optimal_controls.ipynb
@@ -14,10 +14,65 @@
     "if os.path.basename(os.getcwd()) != 'Learning-Dynamic-Systems': os.chdir(\".\\\\..\") \n",
     "\n",
     "import numpy as np\n",
-    "from optimal_controller.state_space import generate_perturbed\n",
     "from optimal_controller.optimal_controls import *\n",
     "import logging\n",
     "logging.basicConfig(level=logging.INFO, force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.200],\n",
+       "       [-0.400]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sims.armax import ARMAX\n",
+    "A = [1.0, -0.7, -0.1]\n",
+    "B = [0.0, -0.4, -0.2]\n",
+    "C = [1.0]\n",
+    "armax = ARMAX(A,B,C,dt=0.02)\n",
+    "\n",
+    "n = 100\n",
+    "u = 1\n",
+    "x = np.zeros((2,n))\n",
+    "for i in range(n):\n",
+    "    armax.step(u=1,r=1)\n",
+    "    x[:,i] = armax.state.flatten()\n",
+    "    \n",
+    "# plt.plot(x[0,:])\n",
+    "# plt.plot(x[1,:])\n",
+    "armax.B_mat_ocf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.200, -0.400]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "armax.state.T"
    ]
   },
   {
@@ -325,7 +380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capstone",
+   "display_name": "capstone_v3",
    "language": "python",
    "name": "python3"
   },
